trying to fix background image load on iphone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,12 +31,12 @@
      background: black;
  }
 
- .header-container {
+ /* .header-container {
      width: 100%;
      display: flex;
      flex-direction: column;
      align-items: center;
- }
+ } */
 
  .container {
      display: flex;
@@ -61,6 +61,7 @@
  h1 {
      font-size: 50px;
      color: white;
+     text-align: center;
      font-family: 'Zilla Slab', serif;
      font-weight: bold;
      text-shadow: 2px 2px black, 2px 2px 2px black;
@@ -236,10 +237,21 @@
      }
  }
 
- @media only screen and (min-width: 480px) {
+ /* @media only screen and (max-width: 480px) {
      body {
          background-image: url("../images/background-image-phone.jpg");
          background-repeat:  no-repeat;
-         background-size: cover;
+         /* background-size: cover; */
      }
- }
+
+     h1 { 
+        text-align: left;
+     }
+
+     .links a:hover {
+        width: 50%;
+    }
+    .links a {
+        display: flex;
+    }
+ } */
